Add properties for maven publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,23 @@
 kotlin.code.style=official
 
-libraryGroup=dev.shreyaspatil.compose-compiler-report-generator
-libraryVersion=1.0.0-alpha01
+GROUP=dev.shreyaspatil.compose-compiler-report-generator
+VERSION_NAME=1.0.0-alpha01
+
+# Library configuration
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+
+POM_INCEPTION_YEAR=2022
+POM_URL=https://github.com/PatilShreyas/compose-report-to-html/
+
+POM_LICENSE_NAME=MIT
+POM_LICENSE_URL=https://raw.githubusercontent.com/PatilShreyas/compose-report-to-html/main/LICENSE
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=https://github.com/PatilShreyas/compose-report-to-html/
+POM_SCM_CONNECTION=scm:git:git://github.com/PatilShreyas/compose-report-to-html.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/PatilShreyas/compose-report-to-html.git
+
+POM_DEVELOPER_ID=PatilShreyas
+POM_DEVELOPER_NAME=Shreyas Patil
+POM_DEVELOPER_URL=https://github.com/PatilShreyas/
