Publish core and report generator separately

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,19 @@ jobs:
 
       - name: Publish Library on Maven Central
         run: |
-          echo "Publishing library🚀"
-          ./gradlew publish --no-daemon --no-parallel
-          echo "Published✅"
-          echo "Releasing repository...🚀"
+          echo "Publishing Core🚀"
+          ./gradlew :core:publish --no-daemon --no-parallel
+          echo "Published Core✅"
+          echo "Releasing Core...🚀"
           ./gradlew closeAndReleaseRepository
-          echo "Released✅"
+          echo "Released Core✅"
+          
+          echo "Publishing Report Generator🚀"
+          ./gradlew :reportGenerator:publish --no-daemon --no-parallel
+          echo "Published Report Generator✅"
+          echo "Releasing Report Generator...🚀"
+          ./gradlew closeAndReleaseRepository
+          echo "Released Report Generator✅"
         env:
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_PASSWORD }}
