--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 kotlin.code.style=official
 
 GROUP=dev.shreyaspatil.compose-compiler-report-generator
-VERSION_NAME=1.0.0-alpha03
+VERSION_NAME=1.0.0-alpha05-dev03
 
 # Library configuration
 SONATYPE_HOST=DEFAULT
-RELEASE_SIGNING_ENABLED=true
+RELEASE_SIGNING_ENABLED=false
 
 POM_INCEPTION_YEAR=2023
 POM_URL=https://github.com/PatilShreyas/compose-report-to-html/
