--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,14 @@ jobs:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
 
+      - name: Publish Gradle Plugin
+        run: |
+          echo "Publishing Gradle Plugin🚀"
+          ./gradlew :gradle-plugin:publishPlugins
+        env:
+          ORG_GRADLE_PROJECT_gradle.publish.key: ${{ secrets.GRADLE_PLUGIN_PORTAL_KEY }}
+          ORG_GRADLE_PROJECT_gradle.publish.secret: ${{ secrets.GRADLE_PLUGIN_PORTAL_SECRET }}
+
       - name: Publish CLI Application 🚀
         run: |
           npm ci
