--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 kotlin.code.style=official
 
 GROUP=dev.shreyaspatil.compose-compiler-report-generator
-VERSION_NAME=1.0.0-alpha04-dev02
+VERSION_NAME=1.0.0-beta01
 
 # Library configuration
 SONATYPE_HOST=DEFAULT
