--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "preferGlobal": true,
   "repository": "https://github.com/PatilShreyas/compose-report-to-html",
-  "version": "1.0.0-beta03",
+  "version": "1.0.0",
   "jdeploy": {
     "jdk": false,
     "javaVersion": "11",
