--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 kotlin.code.style=official
+# KMP
+kotlin.js.compiler=ir
+kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 GROUP=dev.shreyaspatil.compose-compiler-report-generator
 VERSION_NAME=1.3.1
