Add android, desktop & multiplatform samples

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 kotlin.code.style=official
 
 GROUP=dev.shreyaspatil.compose-compiler-report-generator
-VERSION_NAME=1.3.1
+VERSION_NAME=1.3.2-SNAPSHOT
 
 # Library configuration
 SONATYPE_HOST=DEFAULT
